Recent changes in the INET Framework
====================================

INET 3.6.6 (August 2019) - stable
---------------------------------

This release contains a bug fix for an issue where clang did not export
the typinfo symbols for classes on Windows. This caused link errors on
dependent projets. It requires OMNeT++ 5.3 or later.

General:

  - Added NetworkCommunicationFingerprintCalculator, to be able to generate
    INET 4 compatible fingerprints that are based on network communication.


INET 3.6.5 (April 2019) - stable
--------------------------------

This release contains minor bug fixes and compatibility fixes for the
OMNeT++ 5.4.1 release and for recent Linux distros. It requires
OMNeT++ 5.3 or later.

General:

  - Added missing measurement units for 0 values in NED and INI files
  - NED files are now using fully qualified type names
  - Added missing doParsimPacking/doParsimUnpacking in L3Address

Ethernet:

  - Fixed 'EtherMAC swallows frames when PAUSE is engaged (#391)'
  - Fixed 'Cannot abort PAUSE (LFC) before timeout (#390)'
    (author: Danushka Menikkumbura)

ieee802.11:

  - Fixed ACK frame duration bug where the duration was incorrectly
    rounded up in seconds instead of microseconds for data fragment ACKs.

TCP:

  - Bugfix: static variables were removed, but remained in header

SCTP:

  - Set the DupTsn relative to the localDiffTSN

IPv6:

  - Added constructors in AdvPrefix.

Visualizers:

  - Removed dependence on ObjectLocatorNode as it was removed in recent
    versions of osgEarth


INET 3.6.4 (March 2018) - stable
--------------------------------

This release contains minor bug fixes and compatibility fixes for the
OMNeT++ 5.3 Preview 4 release. It requires OMNeT++ 5.1 or later.

General:

  - Changed some module parameters from double to int.

  - Corrected memory management issue in radio module.

  - common: added intWithUnit() ned function.

Packet printer:
