@@ -39,12 +39,12 @@
 
 using namespace omnetpp;
 
-#if OMNETPP_VERSION < 0x0501 || OMNETPP_BUILDNUM < 1010
-#  error At least OMNeT++/OMNEST version 5.1 required
-#endif // if OMNETPP_VERSION < 0x0501
+#if OMNETPP_VERSION < 0x0503 || OMNETPP_BUILDNUM < 1010
+#  error At least OMNeT++/OMNEST version 5.3 required
+#endif // if OMNETPP_VERSION < 0x0503
 
 #define INET_VERSION  0x0306
-#define INET_PATCH_LEVEL 0x06
+#define INET_PATCH_LEVEL 0x07
 
 #if OMNETPP_VERSION < 0x0600
 #define OMNETPP5_CODE(x) x
